# c3d-rs

./: Cargo.toml  README.md
src/: lib.rs
test_data/: vicon_trial.c3d
