[package]
name = "c3d-rs"
version = "0.1.6-alpha.0"
authors = ["Raymond Yeh <extraymond@gmail.com>"]
edition = "2018"
description = "A c3d(biomechanics data format) parser written in rust."
license = "Apache-2.0/MIT"
repository = "https://github.com/extraymond/c3d-rs"
homepage = "https://github.com/extraymond/c3d-rs"
readme = "README.md"
include = ["src/lib.rs", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.19"
anyhow = "1.0.31"
log = "0.4.8"

[dev-dependencies]
femme = "2.1.0"
